name:                   json-rpc
version:                0.1.0.2
synopsis:               Fully-featured JSON-RPC 2.0 library
description:
  This JSON-RPC library is fully-compatible with JSON-RPC 2.0 and
  partially-compatible with JSON-RPC 1.0. It provides an interface that combines
  a JSON-RPC client and server. It can set and keep track of request ids to
  parse responses. There is support for sending and receiving notifications.
  You may use any underlying transport. Basic TCP client and server provided.
homepage:               https://github.com/xenog/json-rpc
license:                PublicDomain
license-file:           UNLICENSE
author:                 Jean-Pierre Rupp
maintainer:             root@haskoin.com
category:               Network
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >= 1.10

library
  exposed-modules:      Network.JsonRpc
  other-modules:        Network.JsonRpc.Data,
                        Network.JsonRpc.Conduit
  build-depends:        base                        >= 4.6      && < 5,
                        aeson                       >= 0.7.0.5  && < 0.8,
                        async                       >= 2.0      && < 2.1,
                        bytestring                  >= 0.10     && < 0.11,
                        conduit                     >= 1.1      && < 1.2,
                        conduit-extra               >= 1.1      && < 1.2,
                        deepseq                     >= 1.3      && < 1.4,
                        hashable                    >= 1.2      && < 1.3,
                        mtl                         >= 2.1      && < 2.2,
                        stm                         >= 2.4      && < 2.5,
                        stm-conduit                 >= 2.4      && < 2.6,
                        text                        >= 1.1      && < 1.2,
                        unordered-containers        >= 0.2      && < 0.3
  default-language:     Haskell2010
  ghc-options:          -Wall

test-suite test-json-rpc
  hs-source-dirs:       test
  type:                 exitcode-stdio-1.0 
  main-is:              main.hs
  other-modules:        Network.JsonRpc.Tests,
                        Network.JsonRpc.Arbitrary
  build-depends:        base                        >= 4.6      && < 5,
                        aeson                       >= 0.7.0.5  && < 0.8,
                        async                       >= 2.0      && < 2.1,
                        bytestring                  >= 0.10     && < 0.11,
                        conduit                     >= 1.1      && < 1.2,
                        conduit-extra               >= 1.1      && < 1.2,
                        deepseq                     >= 1.3      && < 1.4,
                        hashable                    >= 1.2      && < 1.3,
                        json-rpc                    >= 0.1      && < 0.2,
                        mtl                         >= 2.1      && < 2.2,
                        stm                         >= 2.4      && < 2.5,
                        stm-conduit                 >= 2.4      && < 2.5,
                        text                        >= 1.1      && < 1.2,
                        unordered-containers        >= 0.2      && < 0.3,
                        QuickCheck                  >= 2.6      && < 2.8,
                        test-framework              >= 0.8      && < 0.9,
                        test-framework-quickcheck2  >= 0.3      && < 0.4
  default-language:     Haskell2010
  ghc-options:          -Wall
