name:                   json-rpc
version:                0.7.1.1
synopsis:               Fully-featured JSON-RPC 2.0 library
description:
  This JSON-RPC library is fully-compatible with JSON-RPC 2.0 and 1.0. It
  provides an interface that combines a JSON-RPC client and server. It can set
  and keep track of request ids to parse responses. There is support for
  sending and receiving notifications.  You may use any underlying transport.
  Basic TCP client and server provided.
homepage:               https://github.com/xenog/json-rpc
license:                PublicDomain
license-file:           UNLICENSE
author:                 Jean-Pierre Rupp
maintainer:             root@haskoin.com
category:               Network
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >= 1.10

source-repository head
  type:                 git
  location:             https://github.com/xenog/json-rpc.git

library
  exposed-modules:      Network.JsonRpc
  other-modules:        Network.JsonRpc.Data,
                        Network.JsonRpc.Interface
                        Network.JsonRpc.Arbitrary
  build-depends:        base                        >= 4.6      && < 5,
                        aeson,
                        attoparsec,
                        bytestring,
                        conduit,
                        conduit-extra,
                        deepseq,
                        hashable,
                        lifted-async,
                        monad-control,
                        monad-logger,
                        mtl,
                        stm,
                        stm-conduit,
                        text,
                        transformers,
                        unordered-containers,
                        vector,
                        QuickCheck
  default-language:     Haskell2010
  ghc-options:          -Wall

test-suite test-json-rpc
  hs-source-dirs:       test
  type:                 exitcode-stdio-1.0 
  main-is:              main.hs
  other-modules:        Network.JsonRpc.Tests
  build-depends:        base                        >= 4.6      && < 5,
                        aeson,
                        bytestring,
                        conduit,
                        json-rpc,
                        lifted-async,
                        monad-logger,
                        mtl,
                        text,
                        unordered-containers,
                        stm,
                        stm-conduit,
                        transformers,
                        QuickCheck,
                        test-framework,
                        test-framework-quickcheck2
  default-language:     Haskell2010
  ghc-options:          -Wall
